# soe-network-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  pcap_struct.rs
src/modules/: mod.rs  pcap_extraction.rs  pcap_struct.rs  soe_packet_extraction.rs  utils.rs
