[package]
edition = "2021"
name = "soe-network-parser"
version = "0.1.0"


[lib]
name = "soe_network_parser_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
path-absolutize = "3.0.13"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"

[dependencies.clap]
features = ["derive"]
version = "3.2.5"

[dependencies.h1emu-core]
default-features = false
features = ["soeprotocol"]
version = "0.8.14"

[profile]
[profile.release]
lto = true
opt-level = 3
